--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
-pkg
-tmp
-rdoc
-*.rbc
 .tm_properties
+.bundle
+/gemfiles/*.lock
+.yardoc
+/_yardoc/
+/coverage/
+/doc/
+/pkg/
+/spec/reports/
+/tmp/
+.DS_Store
