--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-.tm_properties
-.bundle
-/gemfiles/*.lock
-.yardoc
-/_yardoc/
-/coverage/
-/doc/
-/pkg/
-/spec/reports/
-/tmp/
 .DS_Store
+.bundle/
+.rspec
+.ruby-version
+.yardoc
+.env
+Gemfile.lock
+coverage/
+gemfiles/*.gemfile.lock
+log/*.log
+pkg/
