--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -12,21 +12,35 @@ env:
   BUNDLE_PATH: vendor/bundle
   BUNDLE_JOBS: 3
   BUNDLE_RETRY: 3
+  CC_TEST_REPORTER_ID: 8f360e59f6cb98313ccbb27fecf82f667455acec33cf23ae115c2db121852700
 jobs:
   specs:
-    name: ${{ matrix.job }} ruby-${{ matrix.ruby }} ${{ matrix.activerecord && format('activerecord-{0}', matrix.activerecord) }}
+    name: ${{ matrix.job }} ruby-${{ matrix.combo.ruby || matrix.ruby }} ${{ matrix.combo.activerecord && format('activerecord-{0}', matrix.combo.activerecord) }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        ruby: ["2.6"]
-        activerecord: ["4.2", "5.0", "5.1", "5.2", "6.0"]
+        combo:
+          - activerecord: "latest"
+            ruby: "3.0"
+            coverage: true
+          - activerecord: "6.1"
+            ruby: "3.0"
+          - activerecord: "6.0"
+            ruby: "2.7"
+          - activerecord: "5.2"
+            ruby: "2.6"
+          - activerecord: "5.1"
+            ruby: "2.6"
+          - activerecord: "5.0"
+            ruby: "2.5"
         job: [ rspec ]
         include:
-          - ruby: "2.7"
-            activerecord: original
+          - ruby: "3.0"
+            activerecord: "latest"
             job: rspec
           - ruby: "2.7"
+            activerecord: "latest"
             job: standardrb
     steps:
       - name: checkout
@@ -34,18 +48,26 @@ jobs:
       - name: set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: ${{ matrix.ruby }}
-      - name: inject activerecord ${{ matrix.activerecord }}
-        if:   matrix.activerecord != 'original' && matrix.activerecord != null
-        run: | # inject a specific version of activerecord into the Gemfile
+          ruby-version: ${{ matrix.combo.ruby || matrix.ruby }}
+      - name: setup bundler
+        run: |
+          if [ "${{ matrix.combo.bundler }}" != "" ]; then
+            gem uninstall bundler --all
+            gem install bundler --no-document --version ${{ matrix.combo.bundler }}
+          fi
+          if [ "${{ matrix.combo.activerecord || matrix.activerecord }}" != "latest" ]; then
+            echo "using gemfile gemfiles/activerecord_${{ matrix.combo.activerecord || matrix.activerecord }}.gemfile"
+            bundle config set gemfile "gemfiles/activerecord_${{ matrix.combo.activerecord || matrix.activerecord }}.gemfile"
+          fi
           bundle update
-          bundle exec appraisal generate
-          bundle config set gemfile "gemfiles/activerecord_${{ matrix.activerecord }}.gemfile"
       - name: install dependencies
         run:  bundle install
       - name: specs
         if:   matrix.job == 'rspec'
         run:  bundle exec rake spec
+      - name: code coverage
+        if:   matrix.coverage == true
+        uses: paambaati/codeclimate-action@v2.7.5
       - name: standardrb
         if:   matrix.job == 'standardrb'
         run:  bundle exec rake standard
