--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -34,6 +34,10 @@ jobs:
             appraisal: "activerecord_5.1"
           - ruby: "2.5"
             appraisal: "activerecord_5.0"
+          - ruby: "ruby"
+            appraisal: "without_sidekiq"
+          - ruby: "3.0"
+            appraisal: "sidekiq_6"
     steps:
       - name: Checkout
         uses: actions/checkout@v2
