ignore new style until next release

--- a/.standard.yml
+++ b/.standard.yml
@@ -7,5 +7,6 @@ format: progress
 ignore:
   - '**/*':
     - Style/RedundantParentheses
+    - Style/ComparableBetween
   - 'spec/**/*':
     - Lint/UselessAssignment
